--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,9 +15,8 @@ RUN apt-get update && \
 # Set python3.12 as default python3
 RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.12 1
 
-# Remove system-installed wheel package and upgrade pip
-RUN apt-get remove -y python3-wheel && \
-    python3.12 -m pip install --upgrade pip setuptools wheel ninja virtualenv --break-system-packages
+# Install additional Python packages without upgrading system packages
+RUN python3.12 -m pip install --upgrade pip setuptools ninja virtualenv --break-system-packages
 
 # Copy the application source code to /app directory and change the workdir to /app
 # COPY . /app
